--- a/ProyectoPracticaII/Client/Pages/Opinion/NuevaOpinion.razor.css
+++ b/ProyectoPracticaII/Client/Pages/Opinion/NuevaOpinion.razor.css
@@ -79,3 +79,14 @@ Footer {
     padding: 2rem 8%;
     margin-top: auto;
 }
+
+.custom-select {
+    width: 100%;
+    background: #000;
+    padding: 10px;
+    border-radius: 4px;
+    margin-bottom: 16px;
+    border: 1px solid #bd0003;
+    font-size: 18px;
+    color: white;
+}
