cambios con errores en reporte

--- a/ProyectoPracticaII/Client/Pages/Opinion/VerOpinion.razor
+++ b/ProyectoPracticaII/Client/Pages/Opinion/VerOpinion.razor
@@ -47,6 +47,10 @@
                           <td>
                             <ProyectoPracticaII.Client.Pages.PTallerTop.StarRating Rating="@Convert.ToInt32(opinion.Rating)" />
                         </td>
+                        <td>
+                            <a class="btn btn-danger" href="/Opinion/ReporteOpinion/@opinion.IdOpinion"> Reportar</a>
+                        </td>
+
                     </tr>
                 }
             </tbody>
