--- a/ProyectoPracticaII/Client/Pages/Opinion/ReporteOpinion.razor
+++ b/ProyectoPracticaII/Client/Pages/Opinion/ReporteOpinion.razor
@@ -1,6 +1,7 @@
-﻿@page "/Opinion/ReporteOpinion"
+﻿@page "/Opinion/ReporteOpinion/{opinion:int}"
 @using ProyectoPracticaII.Client.Models;
-@inject IHttpService http
+@inject IHttpService Ihttp
+@inject HttpClient http
 @inject NavigationManager NavigatorManager
 
 
@@ -48,17 +49,17 @@
 
     <label>idUsuarioRC</label>
 
-    <InputNumber @bind-Value=NuevoReporteOpinion.IdUsuarioRc style="width: 100%;
+    <InputNumber @bind-Value=NuevoReporteOpinion.IdUsuarioRc  readonly style="width: 100%;
     background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003; font-size:18px; color: white;"></InputNumber>
 
     <label>idTaller</label>
 
-    <InputNumber @bind-Value=NuevoReporteOpinion.IdTaller style="width: 100%;
+    <InputNumber @bind-Value=NuevoReporteOpinion.IdTaller  readonly style="width: 100%;
     background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003; font-size:18px; color: white;"></InputNumber>
 
     <label>idOpinion</label>
 
-    <InputNumber @bind-Value=NuevoReporteOpinion.IdOpinion style="width: 100%;
+    <InputNumber @bind-Value=NuevoReporteOpinion.IdOpinion readonly style="width: 100%;
     background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003; font-size:18px; color: white;"></InputNumber>
 
 
@@ -66,22 +67,22 @@
 
     <label>Comentario</label>
 
-    <InputText @bind-Value=NuevoReporteOpinion.Comentario style="width: 100%;
+    <InputText @bind-Value=NuevoReporteOpinion.Comentario readonly style="width: 100%;
     background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003; font-size:18px; color: white;"></InputText>
 
     <label>Fecha</label>
 
-    <InputText @bind-Value=NuevoReporteOpinion.Fecha style="width: 100%;
+    <InputText @bind-Value=NuevoReporteOpinion.Fecha readonly style="width: 100%;
     background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003; font-size:18px; color: white;"></InputText>
 
     <label>Rating</label>
 
-    <InputNumber @bind-Value=NuevoReporteOpinion.Rating style="width: 100%;
+    <InputNumber @bind-Value=NuevoReporteOpinion.Rating readonly style="width: 100%;
     background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003; font-size:18px; color: white;"></InputNumber>
 
     <label>Motivo</label>
 
-    <InputText @bind-Value=NuevoReporteOpinion.Motivo style="width: 100%;
+    <InputText @bind-Value=NuevoReporteOpinion.Motivo  style="width: 100%;
     background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003; font-size:18px; color: white;"></InputText>
 
             <button class="btnC" @onclick="(()=>CrearReporteOpinion(NuevoReporteOpinion))">Nueva Opinion</button>
@@ -105,14 +106,44 @@
     [Parameter] public int login { get; set; }
     [Parameter] public int opinion { get; set; }
     [Parameter] public int taller { get; set; }
+    Opinione opinionEncontrada = new Opinione();
+    protected override async Task OnInitializedAsync()
+    {
+        base.OnInitializedAsync();
+        await BuscarOpinion();
+        NuevoReporteOpinion.IdUsuarioRc = opinionEncontrada.IdUsuario;
+        NuevoReporteOpinion.IdTaller = opinionEncontrada.IdTaller;
+        NuevoReporteOpinion.IdOpinion = opinionEncontrada.IdOpinion;
+        NuevoReporteOpinion.Comentario = opinionEncontrada.Comentario;
+        NuevoReporteOpinion.Fecha = opinionEncontrada.Fecha;
+        NuevoReporteOpinion.Rating = opinionEncontrada.Rating;
+    }
+    private async Task BuscarOpinion()
+    {
+
+        try
+        {
+            var response = await http.GetFromJsonAsync<Opinione>($"api/opinion/GetOpinionesPorIdOpinion/{opinion}");
 
 
+            if (response != null)
+            {
+                opinionEncontrada = response;
+
+            }
+        }
+        catch
+        {
+            
+        }
+
+    }
 
 
 
     public async Task CrearReporteOpinion(ReportesOpinione ReportesOpinione)
     {
-        var resultado = await http.Post<ReportesOpinione>("api/ReporteOP", NuevoReporteOpinion);
+        var resultado = await Ihttp.Post<ReportesOpinione>("api/ReporteOP", NuevoReporteOpinion);
         if (resultado.Error)
         {
             var body = resultado.HttpResponseMessage;
