Redireccionamiento opinion andando

--- a/ProyectoPracticaII/Client/Pages/Opinion/ReporteOpinion.razor
+++ b/ProyectoPracticaII/Client/Pages/Opinion/ReporteOpinion.razor
@@ -2,8 +2,11 @@
 @using ProyectoPracticaII.Client.Models;
 @inject IHttpService Ihttp
 @inject HttpClient http
-@inject NavigationManager NavigatorManager
-
+@inject NavigationManager NavManager
+@using Microsoft.AspNetCore.Authorization;
+@using Microsoft.AspNetCore.Components.Authorization;
+@inject AuthenticationStateProvider autenticacionProvider;
+@attribute [Authorize]
 
 
 
@@ -31,9 +34,9 @@
         <section id="Menu">
             <ul>
                 <a href="/Inicio">Inicio</a>
-                <a href="#">Mi Perfil</a>
-                <a href="PMotocicletas/ListaMotocicletas/"> Mis Motos</a>
-                <a href="#">Mi Taller</a>
+                <a @onclick="ReadPerfil">Mi Perfil</a>
+                <a @onclick="Read"> Mis Motos</a>
+                <a @onclick="ReadTaller">Mi Taller</a>
            
             </ul>
 
@@ -116,7 +119,76 @@
     bool camposVacios = false;
     string mensaje = "Por favor completa todos los campos.";
 
+    string IdUsuario;
+    string userPreferences;
+    string storedUserPreferences;
+    @inject IJSRuntime JSRuntime
 
+    private async Task ReadPerfil()
+    {
+
+        storedUserPreferences = await JSRuntime.InvokeAsync<string>("sessionStorage.getItem", "correo");
+
+
+
+        await ObtenerIdUsuario();
+
+        NavManager.NavigateTo($"/MiPerfil/{IdUsuario}");
+
+
+
+    }
+    private async Task Read()
+    {
+
+        storedUserPreferences = await JSRuntime.InvokeAsync<string>("sessionStorage.getItem", "correo");
+
+
+
+        await ObtenerIdUsuario();
+
+        NavManager.NavigateTo($"/PMotocicletas/ListaMotocicletas/{IdUsuario}");
+
+
+
+    }
+    private async Task ReadTaller()
+    {
+
+        storedUserPreferences = await JSRuntime.InvokeAsync<string>("sessionStorage.getItem", "correo");
+
+
+
+        await ObtenerIdUsuario();
+
+        NavManager.NavigateTo($"/PTaller/ListaTaller/{IdUsuario}");
+
+
+
+    }
+    async Task ObtenerIdUsuario()
+    {
+        try
+        {
+
+            var apiUrl = $"api/RastrearId?correo={storedUserPreferences}";
+
+            var response = await http.GetAsync(apiUrl);
+            if (response.IsSuccessStatusCode)
+            {
+                IdUsuario = await response.Content.ReadAsStringAsync();
+            }
+            else
+            {
+                IdUsuario = "Error al obtener el ID del usuario";
+            }
+        }
+        catch (Exception ex)
+        {
+            IdUsuario = $"Error: {ex.Message}";
+        }
+    }
+    
     protected override async Task OnInitializedAsync()
     {
         base.OnInitializedAsync();
@@ -196,7 +268,7 @@
         }
         else
         {
-            NavigatorManager.NavigateTo($"/PBTaller/BuscarTaller");
+            NavManager.NavigateTo($"/PBTaller/BuscarTaller");
         }
 
     }
