--- a/ProyectoPracticaII/Client/Pages/Opinion/NuevaOpinion.razor
+++ b/ProyectoPracticaII/Client/Pages/Opinion/NuevaOpinion.razor
@@ -1,7 +1,7 @@
 ﻿@using ProyectoPracticaII.Client.Models;
 @inject IHttpService Ihttp
 @inject HttpClient http
-@inject NavigationManager NavigatorManager
+@inject NavigationManager NavManager
 @page "/Opinion/NuevaOpinion/{IdTaller:int}"
 
 <!DOCTYPE html>
@@ -28,9 +28,9 @@
         <section id="Menu">
             <ul>
                 <a href="/Inicio">Inicio</a>
-                <a href="#">Mi Perfil</a>
-                <a href="PMotocicletas/ListaMotocicletas/"> Mis Motos</a>
-                <a href="#">Mi Taller</a>
+                <a @onclick="ReadPerfil">Mi Perfil</a>
+                <a @onclick="ReadMoto"> Mis Motos</a>
+                <a @onclick="ReadTaller">Mi Taller</a>
            
             </ul>
 
@@ -212,10 +212,56 @@
             var body = resultado.HttpResponseMessage;
 
         }
-        NavigatorManager.NavigateTo($"/PBTaller/BuscarTaller");
+        NavManager.NavigateTo($"/PBTaller/BuscarTaller");
     }
 
+    
+    
+ 
 
+    private async Task ReadPerfil()
+    {
+
+        storedUserPreferences = await JSRuntime.InvokeAsync<string>("sessionStorage.getItem", "correo");
+
+
+
+        await ObtenerIdUsuario();
+
+        NavManager.NavigateTo($"/MiPerfil/{IdUsuario}");
+
+
+
+    }
+    private async Task ReadMoto()
+    {
+
+        storedUserPreferences = await JSRuntime.InvokeAsync<string>("sessionStorage.getItem", "correo");
+
+
+
+        await ObtenerIdUsuario();
+
+        NavManager.NavigateTo($"/PMotocicletas/ListaMotocicletas/{IdUsuario}");
+
+
+
+    }
+    private async Task ReadTaller()
+    {
+
+        storedUserPreferences = await JSRuntime.InvokeAsync<string>("sessionStorage.getItem", "correo");
+
+
+
+        await ObtenerIdUsuario();
+
+        NavManager.NavigateTo($"/PTaller/ListaTaller/{IdUsuario}");
+
+
+
+    }
+    
    
   
 }
