--- a/ProyectoPracticaII/Client/Pages/Opinion/VerOpinion.razor
+++ b/ProyectoPracticaII/Client/Pages/Opinion/VerOpinion.razor
@@ -1,7 +1,14 @@
 ﻿@page "/Opinion/verOpinion/{Idtaller:int}"
+
+
 @using ProyectoPracticaII.Client.Models;
-@inject IHttpService http
+@inject IHttpService Ihttp
+@inject HttpClient http
 @inject NavigationManager NavigatorManager
+@using Microsoft.AspNetCore.Authorization;
+@using Microsoft.AspNetCore.Components.Authorization;
+@inject AuthenticationStateProvider autenticacionProvider;
+@attribute [Authorize]
 
 
 <!DOCTYPE html>
@@ -17,9 +24,10 @@
         <section id="Menu">
             <ul>
                 <a href="/Inicio">Inicio</a>
-                <a href="#">Mi Perfil</a>
-                <a href="PMotocicletas/ListaMotocicletas/">Mis Motos</a>
-                <a href="#">Salir</a>
+                <a @onclick="ReadPerfil">Mi Perfil</a>
+                <a @onclick="Read">Mis Motos</a>
+                <a @onclick="ReadTaller">Mi Taller</a>
+                
             </ul>
 
         </section>
@@ -36,6 +44,7 @@
                     <th>Rating</th>
                     <th>-</th>
                     <th>-</th>
+                  
                 </tr>
             </thead>
             <tbody>
@@ -85,7 +94,75 @@
     [Parameter] public int Idtaller { get; set; }
     [Parameter] public int login { get; set; }
     List<Opinione> opiniones;
+    string IdUsuario;
+    string userPreferences;
+    string storedUserPreferences;
+    @inject IJSRuntime JSRuntime
 
+    private async Task ReadPerfil()
+    {
+
+        storedUserPreferences = await JSRuntime.InvokeAsync<string>("sessionStorage.getItem", "correo");
+
+
+
+        await ObtenerIdUsuario();
+
+        NavigatorManager.NavigateTo($"/MiPerfil/{IdUsuario}");
+
+
+
+    }
+    private async Task Read()
+    {
+
+        storedUserPreferences = await JSRuntime.InvokeAsync<string>("sessionStorage.getItem", "correo");
+
+
+
+        await ObtenerIdUsuario();
+
+        NavigatorManager.NavigateTo($"/PMotocicletas/ListaMotocicletas/{IdUsuario}");
+
+
+
+    }
+    private async Task ReadTaller()
+    {
+
+        storedUserPreferences = await JSRuntime.InvokeAsync<string>("sessionStorage.getItem", "correo");
+
+
+
+        await ObtenerIdUsuario();
+
+        NavigatorManager.NavigateTo($"/PTaller/ListaTaller/{IdUsuario}");
+
+
+
+    }
+    async Task ObtenerIdUsuario()
+    {
+        try
+        {
+
+            var apiUrl = $"api/RastrearId?correo={storedUserPreferences}";
+
+            var response = await http.GetAsync(apiUrl);
+            if (response.IsSuccessStatusCode)
+            {
+                IdUsuario = await response.Content.ReadAsStringAsync();
+            }
+            else
+            {
+                IdUsuario = "Error al obtener el ID del usuario";
+            }
+        }
+        catch (Exception ex)
+        {
+            IdUsuario = $"Error: {ex.Message}";
+        }
+    }
    
 
 
@@ -99,7 +176,7 @@
     private async Task Leer()
     {
 
-        var respuesta = await http.Get<List<Opinione>>($"api/Opinion/GetOpinionesPorIdTaller/{Idtaller}");
+        var respuesta = await Ihttp.Get<List<Opinione>>($"api/Opinion/GetOpinionesPorIdTaller/{Idtaller}");
         if (!respuesta.Error)
         {
             opiniones = respuesta.Respuesta;
