--- a/ProyectoPracticaII/Client/Pages/PBTaller/BuscarTaller.razor
+++ b/ProyectoPracticaII/Client/Pages/PBTaller/BuscarTaller.razor
@@ -38,10 +38,12 @@
     <header>
         <section id="Menu">
             <ul>
-                <a href="#">Mi Perfil</a>
-                <a href="/PMotocicletas/ListaMotocicletas/">Mis Motos</a>
-                <a href="/PTaller/ListaTaller/">Mi Taller</a>
-                <a href="#">Salir</a>
+                <a href="/Inicio">Inicio</a>
+                <a @onclick="ReadPerfil">Mi Perfil</a>
+                <a @onclick="Read">Mis Motos</a>
+                <a @onclick="ReadTaller">Mi Taller</a>
+               
+
             </ul>
 
         </section>
@@ -227,5 +229,73 @@
 
     }
 
-  
+    string IdUsuario;
+    string userPreferences;
+    string storedUserPreferences;
+    @inject IJSRuntime JSRuntime
+
+    private async Task ReadPerfil()
+    {
+
+        storedUserPreferences = await JSRuntime.InvokeAsync<string>("sessionStorage.getItem", "correo");
+
+
+
+        await ObtenerIdUsuario();
+
+        NavManager.NavigateTo($"/MiPerfil/{IdUsuario}");
+
+
+
+    }
+    private async Task Read()
+    {
+
+        storedUserPreferences = await JSRuntime.InvokeAsync<string>("sessionStorage.getItem", "correo");
+
+
+
+        await ObtenerIdUsuario();
+
+        NavManager.NavigateTo($"/PMotocicletas/ListaMotocicletas/{IdUsuario}");
+
+
+
+    }
+    private async Task ReadTaller()
+    {
+
+        storedUserPreferences = await JSRuntime.InvokeAsync<string>("sessionStorage.getItem", "correo");
+
+
+
+        await ObtenerIdUsuario();
+
+        NavManager.NavigateTo($"/PTaller/ListaTaller/{IdUsuario}");
+
+
+
+    }
+    async Task ObtenerIdUsuario()
+    {
+        try
+        {
+
+            var apiUrl = $"api/RastrearId?correo={storedUserPreferences}";
+
+            var response = await http.GetAsync(apiUrl);
+            if (response.IsSuccessStatusCode)
+            {
+                IdUsuario = await response.Content.ReadAsStringAsync();
+            }
+            else
+            {
+                IdUsuario = "Error al obtener el ID del usuario";
+            }
+        }
+        catch (Exception ex)
+        {
+            IdUsuario = $"Error: {ex.Message}";
+        }
+    }
 }
