--- a/ProyectoPracticaII/Client/Pages/Perfil/MiPerfil.razor
+++ b/ProyectoPracticaII/Client/Pages/Perfil/MiPerfil.razor
@@ -37,9 +37,9 @@
         <section id="Menu">
             <ul>
                 <a href="/Inicio">Inicio</a>
-                <a href="/MiPerfil">Mi Perfil</a>
-                <a href="PMotocicletas/ListaMotocicletas/"> Mis Motos</a>
-                <a href="#">Mi Taller</a>
+                <a href="/MiPerfil/@login">Mi Perfil</a>
+                <a href="PMotocicletas/ListaMotocicletas/@login"> Mis Motos</a>
+                <a href="PTaller/ListaTaller/@login">Mi Taller</a>
            
             </ul>
         </section>
