--- a/ProyectoPracticaII/Client/Pages/PMotocicletas/ListaMotocicletas.razor
+++ b/ProyectoPracticaII/Client/Pages/PMotocicletas/ListaMotocicletas.razor
@@ -27,7 +27,7 @@
         <section id="Menu">
             <ul>
                 <a href="/Inicio">Inicio</a>
-                <a href="#">Mi Perfil</a>
+                <a href="/MiPerfil/@login">Mi Perfil</a>
            
                 <a @onclick="ReadTaller">Mi Taller</a>
                 <a href="#">Salir</a>
