--- a/ProyectoPracticaII/Client/Pages/PMotocicletas/CrearMoto.razor
+++ b/ProyectoPracticaII/Client/Pages/PMotocicletas/CrearMoto.razor
@@ -34,7 +34,7 @@
         <section id="Menu">
             <ul>
                 <a href="/Inicio">Inicio</a>
-                <a href="#">Mi Perfil</a>
+                <a href="/MiPerfil/@login">Mi Perfil</a>
                 <a @onclick="Read"> Mis Motos</a>
                 <a @onclick="ReadTaller">Mi Taller</a>
            
