--- a/ProyectoPracticaII/Client/Pages/PTaller/ListaTaller.razor
+++ b/ProyectoPracticaII/Client/Pages/PTaller/ListaTaller.razor
@@ -23,9 +23,9 @@
         <section id="Menu">
             <ul>
                 <a href="/Inicio">Inicio</a>
-                <a href="#">Mi Perfil</a>
-                <a href="PMotocicletas/ListaMotocicletas/@login">Mis Motos</a>
-                <a href="#">Salir</a>
+                <a href="/MiPerfil/@login">Mi Perfil</a>
+                <a href="PMotocicletas/ListaMotocicletas/@login">Mis Motos</a> 
+           
             </ul>
 
         </section>
