--- a/ProyectoPracticaII/Client/Pages/PTaller/CrearT.razor
+++ b/ProyectoPracticaII/Client/Pages/PTaller/CrearT.razor
@@ -31,7 +31,7 @@
         <section id="Menu">
             <ul>
                 <a href="/Inicio">Inicio</a>
-                <a href="#">Mi Perfil</a>
+                <a href="/MiPerfil/@login">Mi Perfil</a>
                 <a href="PTaller/ListaTaller/@login"> Mi Taller</a>
                   <a href="PMotocicletas/ListaMotocicletas/@login">Mis Motos</a>
                 @*https://localhost:44392/PTaller/CrearT*@
