VISTA INVITADO TERMINADA

--- a/ProyectoPracticaII/Client/Pages/MenuLogin.razor
+++ b/ProyectoPracticaII/Client/Pages/MenuLogin.razor
@@ -26,7 +26,7 @@
                 <br/> 
                 <a class="Astyle" href="/registro"> Registrarse </a>
                 <br />
-                <a Class="Astyle" href="/Inicio"> Invitado </a>
+                <a Class="Astyle" href="/Invitado"> Invitado </a>
                 <br />
             </div>
             
