--- a/ProyectoPracticaII/Client/Pages/Login.razor
+++ b/ProyectoPracticaII/Client/Pages/Login.razor
@@ -58,7 +58,10 @@
             <InputText @bind-Value=login.Clave type="password" style=" width: 100%;
     background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003; font-size:18px; color: white;"></InputText>
 
-
+            @if (contraseñaIncorrecta)
+            {
+                @mensaje    
+            }
 
             <button class="btnC" @onclick="()=>{IniciarSesion();save(login.Correo);}">Entrar</button>
 
@@ -87,7 +90,8 @@
 
 @code {
     Usuario NuevoUsuario = new Usuario();
-
+    bool contraseñaIncorrecta = false;
+    string mensaje = "Correo o contraseña incorrecta";
 
     private LoginDTO login = new LoginDTO(); 
 
@@ -113,8 +117,14 @@
             var autenticacionExt = (AutenticacionExtension)autenticacionProvider;
             await autenticacionExt.ActualizarEstadoAutenticacion(sesionUsuario); 
 
-            NavigatorManager.NavigateTo("/Inicio"); 
+            NavigatorManager.NavigateTo("/Inicio");
         }
+        else 
+        {
+            contraseñaIncorrecta = true;
+        }
+
+        
     }
 
   
